--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,25 @@ body {
 div {
     border: 1px solid Chocolate;
 }
+
+/* Navigation Section */
+.top-navigation {
+    background-color: #fff;
+}
+.top-navigation > .content {
+    width: 970px;
+    height: 70px;
+    margin: 0 auto;
+}
+.links {
+	float: right;
+	display: inline-block
+}
+
+.content {
+	padding: 0px 15px;
+	font-family: 'Roboto', sans-serif; 
+font-size: 16px; 
+color: #838994; 
+letter-spacing: 0.03em;
+}
