--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ div {
     width: 970px;
     height: 4.375rem;
     margin: auto;
+    margin-bottom: 1rem;   
 }
 .top-navigation > .logo {
     height: 4.375rem;
@@ -107,4 +108,12 @@ div {
 .top-navigation .links li:hover {
     cursor: pointer;
     color: #333333;
+}
+/* Introduction Section */
+.introduction {
+	background-image: url('../images/first-background.jpg');
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45.938rem;
 }
