--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ div {
 	font-size: 16px; 
 	color: #838994; 
 	letter-spacing: 0.03em;
+	width: 970px;
+    margin: auto;
+
 }
 
 
@@ -81,9 +84,7 @@ div {
     z-index: 9999;
 }
 .top-navigation > .content {
-    width: 970px;
     height: 4.375rem;
-    margin: auto;
     margin-bottom: 1rem;   
 }
 .top-navigation > .logo {
@@ -109,6 +110,8 @@ div {
     cursor: pointer;
     color: #333333;
 }
+
+
 /* Introduction Section */
 .introduction {
 	background-image: url('../images/first-background.jpg');
@@ -116,4 +119,32 @@ div {
     background-repeat: no-repeat;
     background-size: cover;
     height: 45.938rem;
+    overflow: auto;
+}
+
+}
+.introduction h1,
+.introduction h3 {
+    color: white;
+    text-align: center;
+    font-weight: 300;
+}
+.introduction h1 {
+    margin-top: 17.5rem;
+    font-size: 3.125rem;
+    text-align: center;
+
+}
+.introduction h3 {
+    margin-top: 1.25rem;
+    font-size: 1.563rem;
+    text-align: center;
+
+}
+.big-button {
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 16px 26px;
+    line-height: 1.33;
 }
