--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,6 @@ div {
 	letter-spacing: 0.03em;
 	width: 970px;
     margin: auto;
-
 }
 
 
@@ -147,4 +146,15 @@ div {
     border-radius: 4px;
     padding: 16px 26px;
     line-height: 1.33;
+    background-color: #f15a29;
+    text-align: center;
+    display: block;
+    font-size: 16px;
+    margin-top: 1.5rem;
+
+}
+.big-button:hover {
+    background-color: #d9400e;
+    border-color: #cf3d0e;
+    cursor: pointer;
 }
