--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ table {
 	border-spacing: 0;
 }
 body {
-    background-color: LightGray;
+    background-color: White;
 }
 div {
     border: 1px solid Chocolate;
@@ -158,3 +158,47 @@ div {
     border-color: #cf3d0e;
     cursor: pointer;
 }
+
+
+
+
+/* Cases Section */
+.cases {
+	background-color: #FFFFFF;
+}
+
+.cases h1 {
+	margin-top: 3.5rem;
+    font-size: 3.125rem;
+    text-align: center;
+    margin-bottom: 3.5rem;
+}
+
+.cases .content {
+    margin-top: 4.875rem;
+    padding: none;
+    color: #1d1e21;
+    text-align: center;
+}
+.cases h2 {
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+}
+.cases .devices > li {
+    width: 33.3333333%;
+    float:left;
+}
+.cases .devices h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0px 1.875rem;
+}
+.cases .devices p {
+    font-weight: 300;
+    font-size: 1.313rem;
+}
+
+
+
+
